--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Auxiliaire de vie 33</title>
 </head>
 <body>
+    <p>test</p>
     <div class="image-container">
         <img src="votre-image.jpg" alt="Description de votre image" class="main-image" id="mainImage">
     </div>
