update and test

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="image-container">
-        <img src="votre-image.jpg" alt="Description de votre image" class="main-image" id="mainImage">
+        <img src="IMG_5810.jpg" alt="Description de votre image" class="main-image" id="mainImage">
     </div>
 </body>
 </html>
