--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <title>Auxiliaire de vie 33</title>
 </head>
 <body>
-    <p>test</p>
     <div class="image-container">
-        <img src="IMG_5810.jpg" alt="Description de votre image" class="main-image" id="mainImage">
+        <img src="IMG_5810.png" alt="Description de votre image" class="main-image" id="mainImage">
     </div>
 </body>
 </html>
